# ClickUpAPI

./: CMakeLists.txt
Chinchilla.ClickUp/: .CMakeLists.txt.swp  CMakeLists.txt  ClickUpApi.cs
Chinchilla.ClickUp.Tests/: CMakeLists.txt
Chinchilla.ClickUp/Checklist/: Checklist.cs
Chinchilla.ClickUp/CustomFields/: CustomField.cs
Chinchilla.ClickUp/CustomFields/CustomFieldTypeConfigs/: CustomFieldTypeConfig.cs  CustomFieldTypeConfigDropDown.cs  CustomFieldTypeConfigField.cs  CustomFieldTypeConfigLabel.cs  CustomFieldTypeConfigListRelationship.cs  CustomFieldTypeConfigOption.cs  CustomFieldTypeConfigOptionDropDown.cs  CustomFieldTypeConfigOptionLabel.cs
Chinchilla.ClickUp/CustomFields/CustomFieldValues/: CustomFieldValue.cs  CustomFieldValueDropDown.cs  CustomFieldValueLabel.cs  CustomFieldValueListRelationship.cs  CustomFieldValueListRelationshipValue.cs  CustomFieldValueNumber.cs  CustomFieldValueUrl.cs
Chinchilla.ClickUp/Enums/: FieldType.cs
Chinchilla.ClickUp/Params/: ParamsEditTaskCustomField.cs  ParamsGetListCustomFields.cs  ParamsGetTasksByListId.cs
Chinchilla.ClickUp/Requests/: RequestCreateTaskInList.cs  RequestEditTask.cs  RequestEditTaskCustomField.cs  RequestEditTaskCustomFieldRelationship.cs
Chinchilla.ClickUp/Responses/: ResponseListCustomFields.cs  ResponseTasks.cs
Chinchilla.ClickUp/Responses/ResponseModel/: ResponseModelListCustomField.cs  ResponseModelTask.cs
